--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
+    "aquarius-api": "^0.0.3",
+    "aquarius-auth": "^0.0.2",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
